--- a/src/myhouse_admin/templates/tickets/ticket_update.html
+++ b/src/myhouse_admin/templates/tickets/ticket_update.html
@@ -8,6 +8,7 @@
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'plugins/summernote/summernote-bs4.min.css' %}">
+    <link rel="stylesheet" href="{% static 'plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css' %}">
 {% endblock extra_css %}
 
 {% block main_content %}
