--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -9,6 +9,7 @@
     <title>{% block title %}Document{% endblock title %}</title>
     {% block extra_meta %}{% endblock extra_meta %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="short icon" href="{% static 'img/favicon.png' %}">
     {% block extra_css %}{% endblock extra_css %}
 </head>
 <body>
