--- a/src/myhouse_admin/templates/cashbox/cbr_update.html
+++ b/src/myhouse_admin/templates/cashbox/cbr_update.html
@@ -6,7 +6,9 @@
 
 {% block cashbox %}bg-light{% endblock cashbox %}
 
-{% block extra_css %}{% endblock extra_css %}
+{% block extra_css %}
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+{% endblock extra_css %}
 
 {% block main_content %}
 <div class="container-fluid">
