--- a/src/myhouse_admin/templates/meters/meter_reading_create.html
+++ b/src/myhouse_admin/templates/meters/meter_reading_create.html
@@ -6,7 +6,9 @@
 
 {% block meters %}bg-light{% endblock meters %}
 
-{% block extra_css %}{% endblock extra_css %}
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css' %}">
+{% endblock extra_css %}
 
 {% block main_content %}
 <div class="container-fluid">
