--- a/src/myhouse_admin/templates/receipts/receipt_list.html
+++ b/src/myhouse_admin/templates/receipts/receipt_list.html
@@ -7,7 +7,15 @@
 {% block receipts %}bg-light{% endblock receipts %}
 
 {% block extra_css %}
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <link rel="stylesheet" href="{% static 'plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}">
+    
+    <style>
+    .ui-datepicker-calendar {
+        display: none;
+    }
+    </style>
+    <link rel="stylesheet" href="{% static 'plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css' %}">
 {% endblock extra_css %}
 
 {% block main_content %}
@@ -71,8 +79,17 @@
                         <th></th>
                         <th></th>
                         <th></th>
-                        <th></th>
-                        <th></th>
+                        <th>
+                            <input type="text" value="{{start_date}} - {{end_date}}" class="form-control" id="reservation">
+                        </th>
+                        <th>
+                            <div class="input-group date" id="id_monthPicker" data-target-input="nearest">
+                                <div class="input-group-prepend" data-target="#id_monthPicker" data-toggle="datetimepicker">
+                                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                </div>
+                                <input id="id_monthPicker_input" type="text" name="monthPicker" value="{{selected_month}}" class="form-control w-60 datetimepicker-input" data-target="#id_monthPicker">
+                            </div>
+                        </th>
                         <th></th>
                         <th></th>
                         <th></th>
@@ -135,6 +152,9 @@
 {% endblock main_content %}
 
 {% block extra_js %}
+    <script src="{% static 'plugins/moment/moment-with-locales.min.js' %}"></script>
+    <script src="{% static 'plugins/daterangepicker/daterangepicker.js' %}"></script>
+    <script src="{% static 'plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js' %}"></script>
     <script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
     <script src="{% static 'js/admin/receipts/receipt_list.js' %}" type="module"></script>
 {% endblock extra_js %}
