--- a/src/myhouse_admin/templates/tickets/ticket_create.html
+++ b/src/myhouse_admin/templates/tickets/ticket_create.html
@@ -8,6 +8,7 @@
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'plugins/summernote/summernote-bs4.min.css' %}">
+    <link rel="stylesheet" href="{% static 'plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css' %}">
 {% endblock extra_css %}
 
 {% block main_content %}
@@ -29,8 +30,8 @@
 
 {% block extra_js %}
     <script src="{% static 'plugins/summernote/summernote-bs4.min.js' %}"></script>
-    <script src="{% static 'plugins/daterangepicker/daterangepicker.js' %}"></script>
     <script src="{% static 'plugins/moment/moment-with-locales.min.js' %}"></script>
+    <script src="{% static 'plugins/daterangepicker/daterangepicker.js' %}"></script>
     <script src="{% static 'plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js' %}"></script>
     <script src="{% static 'js/admin/tickets/ticket_create_update.js' %}" type="module"></script>
 {% endblock extra_js %}
