--- a/src/myhouse_admin/templates/meters/meter_list.html
+++ b/src/myhouse_admin/templates/meters/meter_list.html
@@ -57,8 +57,8 @@
                         <td>{{meter.flat.floor.section}}</td>
                         <td>{{meter.flat.number}}</td>
                         <td>{{meter.service.name}}</td>
-                        <td>{{meter.testimony|stringformat:".1f"}}</td>
-                        <td>{{meter.service.unit.name}}</td>
+                        <td style="background-color: #DFD5; font-weight: normal">{{meter.testimony|stringformat:".1f"}}</td>
+                        <td style="background-color: #DFD5; font-weight: normal">{{meter.service.unit.name}}</td>
                         <td>
                             <div class="btn-group">
                                 <a href="{% url 'myhouse_admin:meter_create' %}?meter_id={{meter.pk}}" class="btn btn-default">
@@ -76,8 +76,6 @@
                             </a>
                         </td>
                     </tr>
-                {% empty %}
-                    <tr><td colspan="7">Показаний счетчиков не обнаружено</td></tr>
                 {% endfor %}
                 </tbody>
             </table>
