--- a/src/myhouse_admin/templates/personal_accounts/pa_detail.html
+++ b/src/myhouse_admin/templates/personal_accounts/pa_detail.html
@@ -27,7 +27,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="uid-addon1">№</span>
                             </div>
-                            <input type="text" class="form-control" aria-describedby="uid-addon1" value="{{ personal_account.uid }}">
+                            <input type="text" class="form-control" aria-describedby="uid-addon1" value="{{ personal_account.uid }}" disabled="disabled">
                         </div>
                     </div>
                 </div>
