--- a/src/users/templates/summary/summary.html
+++ b/src/users/templates/summary/summary.html
@@ -19,7 +19,7 @@
                         <div class="small-box bg-danger">
                     {% endif %}
                         <div class="inner">
-                            <h3>{{flat.balance|stringformat:".2f"}} грн ({{flat.indebtedness|stringformat:".2f"}} грн. задолженности)</h3>
+                            <h3>{{flat.balance|stringformat:".2f"}} грн ({{flat.indebtedness|stringformat:".2f"}} грн. долг)</h3>
                             <p>Баланс по квартире</p>
                         </div>
                         <div class="icon">
